# qrab

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
qrab_cli/: Cargo.toml
qrab_cli/src/: main.rs
qrab_core/: Cargo.toml
qrab_core/src/: canvas.rs  data.rs  lib.rs  meta.rs  qrstandard.rs
qrab_decode/: Cargo.toml
qrab_encode/: Cargo.toml
qrab_encode/src/: encode.rs  lib.rs  paint.rs  render.rs
src/: encode.rs  info.rs  lib.rs  qrcode.rs
src/encode/: builder.rs  ecc.rs  encoder.rs  mod.rs  segment.rs
src/qrcode/: code.rs  ecl.rs  info.rs  mask.rs  mod.rs  module.rs  properties.rs  qrcode.rs  version.rs
tests/: encoding.rs  matrix.rs
